# My_Blog

./: .gitignore  README.md  manage.py  pdm.toml  pyproject.toml  requirements.txt  uwsgi.ini
.devcontainer/: devcontainer.json
css3two_blog/: admin.py  admin_1.py  feeds.py  models.py  urls.py  views.py
css3two_blog/migrations/: 0001_initial.py  0002_blogpost_description.py  0003_alter_blogpost_id_alter_blogpost_slug.py
css3two_blog/static/css3two_blog/css/: archive.css  article.css  gfm.css  hybrid.css  style.css  style_jd.css
css3two_blog/static/css3two_blog/documentation/: structrue.html
css3two_blog/static/css3two_blog/fonts/: droidsans-webfont.eot  lato-bol-webfont.eot  lato-reg-webfont.eot  pts55f-webfont.eot  pts75f-webfont.eot
css3two_blog/static/css3two_blog/zhihu-card/: widget.js
css3two_blog/static/css3two_blog/zhihu-card/theme/: github.html  zhihu.html
css3two_blog/templates/: 404.html  mailchimp.html  referral.html
css3two_blog/templates/contact_form/: contact_form.html  contact_form.txt  contact_form_sent.html  contact_form_subject.txt
css3two_blog/templates/css3two_blog/: about.html  archive.html  blog_base.html  blogpost.html  contact.html  contact.php  index.html  podcasts.html  projects.html  siteinfo.html  slide.html  talks.html
my_blog/: choose_settings.py  settings.py  urls.py  views.py  wsgi.py
myblog/: wsgi.py
mytemplatetags/templatetags/: mytags.py
static/css3two_blog/css/: style.css
templates/admin/: base.html  base_site.html  index.html
