[project]
name = "blog"
version = "1.0"
description = ""
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
authors = [{ name = "laike9m", email = "laike9m@gmail.com" }]
dependencies = [
  "django>=5.0",
  "requests<3.0.0,>=2.22.0",
  "django-taggit>=5.0.0",
  "unidecode<2.0.0,>=1.1.1",
  "uwsgi<3.0.0,>=2.0.18",
  "uwsgidecorators<2.0.0,>=1.1.0",
  "markdown2<3.0.0,>=2.4.8",
  "python-dotenv>=0.21.1",
  "django-extensions>=3.1.5",
  "django-types>=0.22.0",
]

[tool.pdm.build]
includes = []

[tool.pdm.scripts]
format = "djhtml css3two_blog/templates/ --tabwidth 2"
dev = "python manage.py runserver 0.0.0.0:8000"
pull = "git pull"
update_deps = "pdm update"
static = "python manage.py collectstatic --noinput"
update = { composite = ["pull", "update_deps", "static"] }

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]
